tests/snapshots/snapshot_fixtures__fixtures__numeric_parse_fixup.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/numeric_parse_fixup.c" (c, x86_64-unknown-linux-gnu)
global __const.main.end_source : s8i[7] = "12tail" [cir_private, default, dso_local, constant]
global __const.main.flt : s8i[13] = "  -3.5e2rest" [cir_private, default, dso_local, constant]
global __const.main.large : s8i[31] = "999999999999999999999999999999" [cir_private, default, dso_local, constant]
global __const.main.empty : s8i[1] = zero [cir_private, default, dso_local, constant]
global __const.main.leading : s8i[10] = "  -17tail" [cir_private, default, dso_local, constant]
global __const.main.whole_unsigned : s8i[3] = "77" [cir_private, default, dso_local, constant]
global __const.main.whole_long : s8i[7] = "-12345" [cir_private, default, dso_local, constant]
global __const.main.whole : s8i[3] = "42" [cir_private, default, dso_local, constant]
global .str : s8i[29] = "%d %ld %lu %ld %ld %lu %.1f\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[8] = "%ld %c\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn atoi(%arg0: s8i*) -> s32i [external, c, pure, nothrow];
fn strtol(%arg0: s8i*, %arg1: s8i**, %arg2: s32i) -> s64i [external, c, nothrow];
fn strtoul(%arg0: s8i*, %arg1: s8i**, %arg2: s32i) -> u64i [external, c, nothrow];
fn atol(%arg0: s8i*) -> s64i [external, c, pure, nothrow];
fn strtod(%arg0: s8i*, %arg1: s8i**) -> double [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i[3], "whole", align 1
    %2 = alloca s8i[7], "whole_long", align 1
    %3 = alloca s8i[3], "whole_unsigned", align 1
    %4 = alloca s8i[10], "leading", align 1
    %5 = alloca s8i[1], "empty", align 1
    %6 = alloca s8i[31], "large", align 16
    %7 = alloca s8i[13], "flt", align 1
    %8 = alloca s8i[7], "end_source", align 1
    %9 = alloca s8i*, "end", align 8
    %10 = alloca s64i, "raw", align 8
    %11 = const 0 : s32i
    store %11, %0
    %12 = get_global @__const.main.whole : s8i[3]*
    copy %1, %12
    %13 = get_global @__const.main.whole_long : s8i[7]*
    copy %2, %13
    %14 = get_global @__const.main.whole_unsigned : s8i[3]*
    copy %3, %14
    %15 = get_global @__const.main.leading : s8i[10]*
    copy %4, %15
    %16 = get_global @__const.main.empty : s8i[1]*
    copy %5, %16
    %17 = get_global @__const.main.large : s8i[31]*
    copy %6, %17
    %18 = get_global @__const.main.flt : s8i[13]*
    copy %7, %18
    %19 = get_global @__const.main.end_source : s8i[7]*
    copy %8, %19
    %20 = const #cir.ptr<null> : s8i*
    store %20, %9, align 8
    %21 = get_global @printf : ((s8i*, ...) -> s32i)*
    %22 = get_global @.str : s8i[29]*
    %23 = cast(array_to_ptrdecay) %22 : s8i*
    %24 = cast(array_to_ptrdecay) %1 : s8i*
    %25 = call @atoi(%24) : s32i [pure]
    %26 = get_global @strtol : ((s8i*, s8i**, s32i) -> s64i)*
    %27 = cast(array_to_ptrdecay) %2 : s8i*
    %28 = const #cir.ptr<null> : s8i**
    %29 = const 10 : s32i
    %30 = call @strtol(%27, %28, %29) : s64i [all]
    %31 = get_global @strtoul : ((s8i*, s8i**, s32i) -> u64i)*
    %32 = cast(array_to_ptrdecay) %3 : s8i*
    %33 = const #cir.ptr<null> : s8i**
    %34 = const 10 : s32i
    %35 = call @strtoul(%32, %33, %34) : u64i [all]
    %36 = cast(array_to_ptrdecay) %4 : s8i*
    %37 = call @atol(%36) : s64i [pure]
    %38 = get_global @strtol : ((s8i*, s8i**, s32i) -> s64i)*
    %39 = cast(array_to_ptrdecay) %6 : s8i*
    %40 = const #cir.ptr<null> : s8i**
    %41 = const 10 : s32i
    %42 = call @strtol(%39, %40, %41) : s64i [all]
    %43 = get_global @strtoul : ((s8i*, s8i**, s32i) -> u64i)*
    %44 = cast(array_to_ptrdecay) %5 : s8i*
    %45 = const #cir.ptr<null> : s8i**
    %46 = const 10 : s32i
    %47 = call @strtoul(%44, %45, %46) : u64i [all]
    %48 = get_global @strtod : ((s8i*, s8i**) -> double)*
    %49 = cast(array_to_ptrdecay) %7 : s8i*
    %50 = const #cir.ptr<null> : s8i**
    %51 = call @strtod(%49, %50) : double [all]
    %52 = call @printf(%23, %25, %30, %35, %37, %42, %47, %51) : s32i [all]
    %53 = get_global @strtol : ((s8i*, s8i**, s32i) -> s64i)*
    %54 = cast(array_to_ptrdecay) %8 : s8i*
    %55 = const 10 : s32i
    %56 = call @strtol(%54, %9, %55) : s64i [all]
    store %56, %10, align 8
    %57 = get_global @printf : ((s8i*, ...) -> s32i)*
    %58 = get_global @.str.1 : s8i[8]*
    %59 = cast(array_to_ptrdecay) %58 : s8i*
    %60 = load %10 : s64i, align 8
    %61 = load %9 : s8i*, align 8
    %62 = load %61 : s8i, align 1
    %63 = cast(integral) %62 : s32i
    %64 = call @printf(%59, %60, %63) : s32i [all]
    %65 = const 0 : s32i
    store %65, %0
    %66 = load %0 : s32i
    return %66
}
