tests/snapshots/snapshot_fixtures__fixtures__option_box_local_arith_bailout.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/option_box_local_arith_bailout.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[10] = "no alloc\n" [cir_private, default, align 1, dso_local, constant]

fn malloc(%arg0: u64i) -> void* [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn free(%arg0: void*) -> void [external, c, nothrow];
fn compute(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %8 = alloca s32i, "flag", align 4
        %9 = alloca s32i, "__retval", align 4
        %10 = alloca s32i*, "p", align 8
        store %arg0, %8
        %11 = const #cir.ptr<null> : s32i*
        store %11, %10, align 8
        scope {
            %36 = load %8 : s32i, align 4
            %37 = cast(int_to_bool) %36 : bool
            if %37 {
                %38 = get_global @malloc : ((u64i) -> void*)*
                %39 = const 4 : u64i
                %40 = const 4 : u64i
                %41 = mul %39, %40 : u64i
                %42 = call @malloc(%41) : void* [all]
                %43 = cast(bitcast) %42 : s32i*
                store %43, %10, align 8
                yield
            }
            yield
        }
        scope {
            %14 = load %10 : s32i*, align 8
            %15 = cast(ptr_to_bool) %14 : bool
            if %15 {
                %20 = load %10 : s32i*, align 8
                %21 = const 1 : s32i
                %22 = ptr_stride %20, %21 : s32i*
                store %22, %10, align 8
                %23 = const 41 : s32i
                %24 = load %10 : s32i*, align 8
                store %23, %24, align 4
                %25 = get_global @printf : ((s8i*, ...) -> s32i)*
                %26 = get_global @.str : s8i[4]*
                %27 = cast(array_to_ptrdecay) %26 : s8i*
                %28 = load %10 : s32i*, align 8
                %29 = load %28 : s32i, align 4
                %30 = call @printf(%27, %29) : s32i [all]
                %31 = get_global @free : ((void*) -> void)*
                %32 = load %10 : s32i*, align 8
                %33 = const -1 : s32i
                %34 = ptr_stride %32, %33 : s32i*
                %35 = cast(bitcast) %34 : void*
                call @free(%35) [all]
                yield
            } else {
                %16 = get_global @printf : ((s8i*, ...) -> s32i)*
                %17 = get_global @.str.1 : s8i[10]*
                %18 = cast(array_to_ptrdecay) %17 : s8i*
                %19 = call @printf(%18) : s32i [all]
                yield
            }
            yield
        }
        %12 = const 0 : s32i
        store %12, %9
        %13 = load %9 : s32i
        return %13
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 1 : s32i
    %3 = call @compute(%2) : s32i [all]
    %4 = const 0 : s32i
    %5 = call @compute(%4) : s32i [all]
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
