tests/snapshots/snapshot_fixtures__fixtures__option_box_local_identity.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/option_box_local_identity.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = "same\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[6] = "diff\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn malloc(%arg0: u64i) -> void* [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn free(%arg0: void*) -> void [external, c, nothrow];
fn compute(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %8 = alloca s32i, "flag", align 4
        %9 = alloca s32i, "__retval", align 4
        %10 = alloca s32i*, "p", align 8
        %11 = alloca s32i*, "q", align 8
        store %arg0, %8
        %12 = const #cir.ptr<null> : s32i*
        store %12, %10, align 8
        %13 = const #cir.ptr<null> : s32i*
        store %13, %11, align 8
        scope {
            %53 = load %8 : s32i, align 4
            %54 = cast(int_to_bool) %53 : bool
            if %54 {
                %55 = get_global @malloc : ((u64i) -> void*)*
                %56 = const 4 : u64i
                %57 = call @malloc(%56) : void* [all]
                %58 = cast(bitcast) %57 : s32i*
                store %58, %10, align 8
                %59 = get_global @malloc : ((u64i) -> void*)*
                %60 = const 4 : u64i
                %61 = call @malloc(%60) : void* [all]
                %62 = cast(bitcast) %61 : s32i*
                store %62, %11, align 8
                yield
            }
            yield
        }
        scope {
            %42 = load %10 : s32i*, align 8
            %43 = load %11 : s32i*, align 8
            %44 = cmp eq %42, %43 : bool
            if %44 {
                %49 = get_global @printf : ((s8i*, ...) -> s32i)*
                %50 = get_global @.str : s8i[6]*
                %51 = cast(array_to_ptrdecay) %50 : s8i*
                %52 = call @printf(%51) : s32i [all]
                yield
            } else {
                %45 = get_global @printf : ((s8i*, ...) -> s32i)*
                %46 = get_global @.str.1 : s8i[6]*
                %47 = cast(array_to_ptrdecay) %46 : s8i*
                %48 = call @printf(%47) : s32i [all]
                yield
            }
            yield
        }
        scope {
            %29 = load %10 : s32i*, align 8
            %30 = cast(ptr_to_bool) %29 : bool
            if %30 {
                %31 = const 1 : s32i
                %32 = load %10 : s32i*, align 8
                store %31, %32, align 4
                %33 = get_global @printf : ((s8i*, ...) -> s32i)*
                %34 = get_global @.str.2 : s8i[4]*
                %35 = cast(array_to_ptrdecay) %34 : s8i*
                %36 = load %10 : s32i*, align 8
                %37 = load %36 : s32i, align 4
                %38 = call @printf(%35, %37) : s32i [all]
                %39 = get_global @free : ((void*) -> void)*
                %40 = load %10 : s32i*, align 8
                %41 = cast(bitcast) %40 : void*
                call @free(%41) [all]
                yield
            }
            yield
        }
        scope {
            %16 = load %11 : s32i*, align 8
            %17 = cast(ptr_to_bool) %16 : bool
            if %17 {
                %18 = const 2 : s32i
                %19 = load %11 : s32i*, align 8
                store %18, %19, align 4
                %20 = get_global @printf : ((s8i*, ...) -> s32i)*
                %21 = get_global @.str.2 : s8i[4]*
                %22 = cast(array_to_ptrdecay) %21 : s8i*
                %23 = load %11 : s32i*, align 8
                %24 = load %23 : s32i, align 4
                %25 = call @printf(%22, %24) : s32i [all]
                %26 = get_global @free : ((void*) -> void)*
                %27 = load %11 : s32i*, align 8
                %28 = cast(bitcast) %27 : void*
                call @free(%28) [all]
                yield
            }
            yield
        }
        %14 = const 0 : s32i
        store %14, %9
        %15 = load %9 : s32i
        return %15
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 1 : s32i
    %3 = call @compute(%2) : s32i [all]
    %4 = const 0 : s32i
    %5 = call @compute(%4) : s32i [all]
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
