tests/snapshots/snapshot_fixtures__fixtures__perror_call_guard_last_os_error.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/perror_call_guard_last_os_error.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[36] = "slate_perror_call_guard_missing.tmp" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[14] = "remove failed" [cir_private, default, align 1, dso_local, constant]

fn remove(%arg0: s8i*) -> s32i [external, c, nothrow];
fn perror(%arg0: s8i*) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "rc", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @.str : s8i[36]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = call @remove(%4) : s32i [all]
    store %5, %1, align 4
    scope {
        %8 = load %1 : s32i, align 4
        %9 = const 0 : s32i
        %10 = cmp lt %8, %9 : bool
        if %10 {
            %11 = get_global @.str.1 : s8i[14]*
            %12 = cast(array_to_ptrdecay) %11 : s8i*
            call @perror(%12) [all]
            %13 = const 1 : s32i
            store %13, %0
            %14 = load %0 : s32i
            return %14
        }
        yield
    }
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
