tests/snapshots/snapshot_fixtures__fixtures__perror_fopen_last_os_error.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/perror_fopen_last_os_error.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[31] = "slate_perror_fopen_missing.tmp" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[2] = "r" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[12] = "open failed" [cir_private, default, align 1, dso_local, constant]

fn fopen(%arg0: s8i*, %arg1: s8i*) -> rec__IO_FILE* [external, c];
fn perror(%arg0: s8i*) -> void [external, c];
fn fclose(%arg0: rec__IO_FILE*) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec__IO_FILE*, "fp", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %4 = get_global @.str : s8i[31]*
    %5 = cast(array_to_ptrdecay) %4 : s8i*
    %6 = get_global @.str.1 : s8i[2]*
    %7 = cast(array_to_ptrdecay) %6 : s8i*
    %8 = call @fopen(%5, %7) : rec__IO_FILE* [all]
    store %8, %1, align 8
    scope {
        %13 = load %1 : rec__IO_FILE*, align 8
        %14 = const #cir.ptr<null> : void*
        %15 = cast(bitcast) %14 : rec__IO_FILE*
        %16 = cmp eq %13, %15 : bool
        if %16 {
            %17 = get_global @.str.2 : s8i[12]*
            %18 = cast(array_to_ptrdecay) %17 : s8i*
            call @perror(%18) [all]
            %19 = const 1 : s32i
            store %19, %0
            %20 = load %0 : s32i
            return %20
        }
        yield
    }
    %9 = load %1 : rec__IO_FILE*, align 8
    %10 = call @fclose(%9) : s32i [all]
    %11 = const 0 : s32i
    store %11, %0
    %12 = load %0 : s32i
    return %12
}
