tests/snapshots/snapshot_fixtures__fixtures__perror_intervening_call_no_rewrite.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/perror_intervening_call_no_rewrite.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[37] = "slate_perror_intervening_missing.tmp" [cir_private, default, align 1, dso_local, constant]
global stdout : rec__IO_FILE* [external, default, align 8, dso_local]
global .str.1 : s8i[14] = "remove failed" [cir_private, default, align 1, dso_local, constant]

fn remove(%arg0: s8i*) -> s32i [external, c, nothrow];
fn fflush(%arg0: rec__IO_FILE*) -> s32i [external, c];
fn perror(%arg0: s8i*) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "rc", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @.str : s8i[37]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = call @remove(%4) : s32i [all]
    store %5, %1, align 4
    %6 = get_global @stdout : rec__IO_FILE**
    %7 = load %6 : rec__IO_FILE*, align 8
    %8 = call @fflush(%7) : s32i [all]
    scope {
        %11 = load %1 : s32i, align 4
        %12 = const 0 : s32i
        %13 = cmp lt %11, %12 : bool
        if %13 {
            %14 = get_global @.str.1 : s8i[14]*
            %15 = cast(array_to_ptrdecay) %14 : s8i*
            call @perror(%15) [all]
            %16 = const 1 : s32i
            store %16, %0
            %17 = load %0 : s32i
            return %17
        }
        yield
    }
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
